--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello vs code</h1>
+
+    <h1>anitha it solutions</h1>
+    
 </body>
 </html>
